@@ -248,3 +248,65 @@ def show_diff(b, revision, file_list):
             raise BzrError("can't represent state %s {%s}" % (file_state, fid))
 
 
+
+class TreeDelta:
+    """Describes changes from one tree to another.
+
+    Contains four lists:
+
+    added
+        (path, id)
+    removed
+        (path, id)
+    renamed
+        (oldpath, newpath, id)
+    modified
+        (path, id)
+
+    A path may occur in more than one list if it was e.g. deleted
+    under an old id and renamed into place in a new id.
+
+    Files are listed in either modified or renamed, not both.  In
+    other words, renamed files may also be modified.
+    """
+    def __init__(self):
+        self.added = []
+        self.removed = []
+        self.renamed = []
+        self.modified = []
+
+
+def compare_inventories(old_inv, new_inv):
+    """Return a TreeDelta object describing changes between inventories.
+
+    This only describes changes in the shape of the tree, not the
+    actual texts.
+
+    This is an alternative to diff_trees() and should probably
+    eventually replace it.
+    """
+    old_ids = old_inv.id_set()
+    new_ids = new_inv.id_set()
+    delta = TreeDelta()
+
+    delta.removed = [(old_inv.id2path(fid), fid) for fid in (old_ids - new_ids)]
+    delta.removed.sort()
+
+    delta.added = [(new_inv.id2path(fid), fid) for fid in (new_ids - old_ids)]
+    delta.added.sort()
+
+    for fid in old_ids & new_ids:
+        old_ie = old_inv[fid]
+        new_ie = new_inv[fid]
+        old_path = old_inv.id2path(fid)
+        new_path = new_inv.id2path(fid)
+
+        if old_path != new_path:
+            delta.renamed.append((old_path, new_path, fid))
+        elif old_ie.text_sha1 != new_ie.text_sha1:
+            delta.modified.append((new_path, fid))
+
+    delta.modified.sort()
+    delta.renamed.sort()    
+
+    return delta
